--- a/docs/_breadcrumb/toc.yml
+++ b/docs/_breadcrumb/toc.yml
@@ -36,7 +36,7 @@
               tocHref: /cpp/c-runtime-library/
               topicHref: /cpp/c-runtime-library/c-run-time-library-reference
               items:
-                - name: Riferimenti
+                - name: Riferimento
                   tocHref: /cpp/c-runtime-library/reference/
                   topicHref: /cpp/c-runtime-library/reference/crt-alphabetical-function-reference
             - name: Libreria standard C++
@@ -53,14 +53,14 @@
                   tocHref: /cpp/mfc/
                   topicHref: /cpp/mfc/mfc-desktop-applications
                   items:
-                    - name: Riferimenti
+                    - name: Riferimento
                       tocHref: /cpp/mfc/reference/
                       topicHref: /cpp/mfc/reference/mfc-classes
                 - name: Classi condivise ATL/MFC
                   tocHref: /cpp/atl-mfc-shared/
                   topicHref: /cpp/atl-mfc-shared/atl-mfc-shared-classes
                   items:
-                    - name: Riferimenti
+                    - name: Riferimento
                       tocHref: /cpp/atl-mfc-shared/reference/
                       topicHref: /cpp/atl-mfc-shared/reference/classes-shared-by-mfc-and-atl
                 - name: C++/CX
