--- a/docs/error-messages/toc.yml
+++ b/docs/error-messages/toc.yml
@@ -141,6 +141,8 @@
       href: compiler-errors-1/fatal-error-c1046.md
     - name: Errore irreversibile C1047
       href: compiler-errors-1/fatal-error-c1047.md
+    - name: Errore irreversibile C1049
+      href: compiler-errors-1/fatal-error-c1049.md
     - name: Errore irreversibile C1051
       href: compiler-errors-1/fatal-error-c1051.md
     - name: Errore irreversibile C1052
